# yarblas

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: l3s.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
src/: aligned_alloc.rs  context.rs  executor.rs  gemm.rs  lib.rs  sgemm.rs
src/kernel/: mod.rs
src/kernel/avx/: l3s.rs  mod.rs
src/kernel/generic/: l3s.rs  mod.rs
src/kernel/sse/: l3s.rs  mod.rs
src/test/: l3s.rs  mod.rs
tests/: l3s.rs
